style/index.css
/* ... */
.contact-form-item {
  position: relative;
  margin-bottom: 8px;
}

.contact-form-icons {
  position: absolute;
  right: 15px;
  top: 70%;
  transform: translateY(-50%);
  color: #777;
}

.contact-form-icons-arrow1 {
  position: absolute;
  left: 220px;
  top: 70%;
  transform: translateY(-50%);
  color: #777;
}

.contact-form-icons-arrow2 {
  position: absolute;
  right: 30px;
  top: 70%;
  transform: translateY(-50%);
  color: #777;
}

.contact-form-icons-size {
  position: absolute;
  left: 220px;
  top: 70%;
  transform: translateY(-50%);
  color: #777;
}

.contact-form-icons-date {
  position: absolute;
  right: 31px;
  top: 68%;
  transform: translateY(-50%);
  color: #777;
}

select:invalid {
  color: #777;
}

option {
  color: #000;
}

.contact-form-button-container {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 32px;
}

.contact-form-button {
  background: #176460;
  border: none;
  color: #fff;
  padding: 8px 24px;
  border-radius: 8px;
  text-transform: uppercase;
}

.contact-form-button:hover {
  background: #00b1ab;
}

/* Testimonial Section */
.testimonial-content {
  background: url(../assets/Testimonial-Background.jpg);
  background-size: cover;
  color: #000;
  padding: 48px 80px;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.7);
}

.testimonial-header1 {
  text-transform: uppercase;
  color: #00b1ab;
  font-size: 2em;
  margin: 24px 0;
}

.testimonial-header2 {
  font-size: 3em;
  font-weight: bold;
  margin-bottom: 48px;
  text-transform: uppercase;
}

.testimonial-content .col-md-4 {
  display: flex;
  justify-content: center;
}

.testimonial-card {
  padding: 40px;
  width: 80%;
  color: white;
  border: none;
  border-radius: 8px;
  margin-bottom: 48px;
  text-align: left;
  transition: all 0.3s ease;
}

.testimonial-card.card1,
.testimonial-card.card3 {
  background: #176460;
}

.testimonial-card.card2 {
  background: #000;
}

.testimonial-star {
  color: #ffff00;
  margin-bottom: 24px;
}

.testimonial-text {
  font-size: 1.1em;
  margin-bottom: 24px;
}

.testimonial-author {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
}

.testimonial-user-section {
  display: flex;
  align-items: center;
}

.testimonial-user {
  margin-right: 8px;
}

.testimonial-button {
  background: #176460;
  border: none;
  color: #fff;
  padding: 8px 24px;
  border-radius: 8px;
  text-transform: uppercase;
}

.testimonial-button:hover {
  background: #00b1ab;
}

/* Our Projects Section */
.our-projects-content {
  background: #fff;
  padding: 48px 80px;
}

.our-projects-container {
  background: #176460;
  color: #fff;
  padding: 24px;
  width: 100%;
  height: 250px;
  border-radius: 8px;
  transition: all 0.3s ease;
}

.our-projects-header1 {
  font-size: 1.5em;
  text-transform: uppercase;
  margin-bottom: 16px;
}

.our-projects-header2 {
  font-size: 2.5em;
  font-weight: bold;
  text-transform: uppercase;
  margin-bottom: 16px;
}

.our-projects-button {
  background: transparent;
  border: 2px solid #fff;
  color: #fff;
  padding: 8px 24px;
  border-radius: 8px;
  text-transform: uppercase;
}

.our-projects-button:hover {
  background: #00b1ab;
  border-color: #00b1ab;
}

.our-projects-image {
  width: 100%;
  height: 250px;
  object-fit: cover;
  border-radius: 8px;
  transition: all 0.3s ease;
}

.our-services-card:hover,
.testimonial-card:hover,
.our-projects-container:hover,
.our-projects-image:hover {
  transform: translateY(-5px);
}

.our-projects-content .row {
  margin-bottom: 24px;
}

/* FAQ Section */
.faq-content {
  background: #176460;
  color: #fff;
  padding: 48px 80px;
  text-align: left;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.faq-header {
  font-size: 2.5em;
}

.faq-button {
  background: transparent;
  border: 2px solid #fff;
  color: #fff;
  padding: 8px 24px;
  border-radius: 8px;
  text-transform: uppercase;
}

.faq-button:hover {
  background: #00b1ab;
  border-color: #00b1ab;
}

/* Footer Section */
.footer-content {
  background: #fff;
  color: #000;
  padding: 48px 80px 0 80px;
}

.footer-header {
  font-size: 1.1em;
  color: #00b1ab;
  margin-bottom: 8px;
  font-weight: bold;
  text-transform: uppercase;
}

.socials2 {
  height: 32px;
  padding-right: 8px;
}

.footer-links {
  list-style: none;
}

.footer-links a {
  text-decoration: none;
  color: #000;
}

.footer-links a:hover {
  text-decoration: none;
  color: #00b1ab;
}

.footer-items {
  margin-left: -30px;
  line-height: 1.7;
}

.contacts2 {
  color: #00b1ab;
}

.footer-content .highlight {
  color: #00b1ab;
  font-weight: bold;
}

/* Responsive Style */
@media only screen and (max-width: 920px) {
  /* Common Section Padding */
  .header-content,
  .nav-content,
  .hero-contact,
  .about-us-content,
  .our-services-content,
  .contact-form-content,
  .testimonial-content,
  .our-projects-content,
  .footer-content,
  .faq-content {
    padding: 24px 40px;
  }

  /* Hero Section */
  .hero-text h1 {
    font-size: 3em;
  }

  .hero-text p {
    font-size: 1.1em;
  }

  /* Form Section */
  .form-background,
  .contact-form-header-background {
    width: 100%;
    max-width: 550px;
  }

  /* Our Projects Section */
  .our-projects-image {
    height: 200px;
  }
}
/* ... */

